Better contrast and logging

--- a/data/index.html
+++ b/data/index.html
@@ -22,12 +22,13 @@
 
     --background-color: #eee;
     --foreground-color: #000;
-    --accent-color: deeppink;
+    --accent-color: #e60073;
   }
   @media (prefers-color-scheme: dark) {
     :root {
       --foreground-color: #fff;
       --background-color: #222;
+      --accent-color: deeppink;
     }
   }
   :target {
