--- a/data/index.html
+++ b/data/index.html
@@ -151,13 +151,15 @@
         display: block;
       }
       .source::before,
-      .launch::before {
+      .launch::before,
+      .share::before {
         content: "";
         display: inline-block;
         width: 1rem;
         height: 1rem;
         margin-inline-end: 1ex;
         vertical-align: middle;
+        background-size: 1rem;
       }
       .source::before {
         background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg'%0Aaria-label='GitHub' role='img'%0AviewBox='0 0 512 512'%3E%3Crect%0Awidth='512' height='512'%0Arx='15%25'%0Afill='%23181717'/%3E%3Cpath fill='%23fff' d='M335 499c14 0 12 17 12 17H165s-2-17 12-17c13 0 16-6 16-12l-1-44c-71 16-86-34-86-34-12-30-28-37-28-37-24-16 1-16 1-16 26 2 40 26 40 26 22 39 59 28 74 22 2-17 9-28 16-35-57-6-116-28-116-126 0-28 10-51 26-69-3-6-11-32 3-67 0 0 21-7 70 26 42-12 86-12 128 0 49-33 70-26 70-26 14 35 6 61 3 67 16 18 26 41 26 69 0 98-60 120-117 126 10 8 18 24 18 48l-1 70c0 6 3 12 16 12z'/%3E%3C/svg%3E");
@@ -166,13 +168,30 @@
         filter: none;
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 -256 1850 1850'%3E%3Cpath d='M1408 608V288q0-119-84.5-203.5T1120 0H288Q169 0 84.5 84.5T0 288v832q0 119 84.5 203.5T288 1408h704q14 0 23-9t9-23v-64q0-14-9-23t-23-9H288q-66 0-113-47t-47-113V288q0-66 47-113t113-47h832q66 0 113 47t47 113v320q0 14 9 23t23 9h64q14 0 23-9t9-23zm384 864V960q0-26-19-45t-45-19q-26 0-45 19l-176 176-652-652q-10-10-23-10t-23 10L695 553q-10 10-10 23t10 23l652 652-176 176q-19 19-19 45t19 45q19 19 45 19h512q26 0 45-19t19-45z' fill='currentColor' transform='matrix(1 0 0 -1 30.4 1427)'/%3E%3C/svg%3E");
       }
-      @media (prefers-color-scheme: dark) {
-        .launch::before {
-          filter: invert(1);
-        }
-      }
       .share {
         display: none;
+        appearance: none;
+        background: none;
+        border: none;
+        cursor: pointer;
+        font-size: inherit;
+        padding-block-start: 0.5rem;
+        padding-inline: 1rem;
+        text-decoration: underline;
+        color: var(--accent-color);
+      }
+      .share::before {
+        filter: none;
+        background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='24' viewBox='0 0 24 24' width='24'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z'/%3E%3C/svg%3E");
+      }
+      .share.mac::before {
+        background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='24' viewBox='0 0 24 24' width='24'%3E%3Cpath d='M0 0h24v24H0V0z' fill='none'/%3E%3Cpath d='M16 5l-1.42 1.42-1.59-1.59V16h-1.98V4.83L9.42 6.42 8 5l4-4 4 4zm4 5v11c0 1.1-.9 2-2 2H6c-1.11 0-2-.9-2-2V10c0-1.11.89-2 2-2h3v2H6v11h12V10h-3V8h3c1.1 0 2 .89 2 2z'/%3E%3C/svg%3E");
+      }
+      @media (prefers-color-scheme: dark) {
+        .launch::before,
+        .share::before {
+          filter: invert(1);
+        }
       }
       .container {
         margin-block-start: 1rem;
@@ -865,6 +884,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of file-tree Web Component"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -935,6 +955,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of Hostme"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -1029,6 +1050,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of HexEd.it - Browser-based Online and Offline Hex Editing"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -1090,6 +1112,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of Improv Wi-Fi: Open standard for setting up Wi-Fi via Bluetooth LE and Serial"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -1156,6 +1179,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of Informatik-Ausbildung mit Microsoft MakeCode"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -1221,6 +1245,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of Logbook"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -1319,6 +1344,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of Link Cleaner"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -1396,6 +1422,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of MConverter: Easy to Use Online File Converter"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -1527,6 +1554,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of PhotoStack"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -1603,6 +1631,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of SQLite Viewer Web App"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -1687,6 +1716,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of StackEdit – In-browser Markdown editor"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -1749,6 +1779,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of SVGcode"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -1874,6 +1905,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of Tidepool"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -1953,6 +1985,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of Telegram Web"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -2057,6 +2090,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of TgStorage"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -2174,6 +2208,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of USpeaking"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -2249,6 +2284,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of Web Bluetooth Demo"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -2333,6 +2369,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of What PWA Can Do Today"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -2533,6 +2570,7 @@
                   width="1280"
                   height="800"
                   alt="Screenshot of みんなのネバーランド - 約束のネバーランド公式コミュニティ -"
+                  loading="lazy"
                 />
               </picture>
             </a>
@@ -2719,7 +2757,11 @@
         });
 
         if ("share" in navigator && "canShare" in navigator) {
+          const isMac = navigator.platform.toUpperCase().indexOf("MAC") >= 0;
           shareButtons.forEach((button) => {
+            if (isMac) {
+              button.classList.add("mac");
+            }
             button.style.display = "block";
             button.addEventListener("click", async (e) => {
               const article = e.target.closest("article");
