--- a/data/index.html
+++ b/data/index.html
@@ -2,7 +2,7 @@
 
 Among others, it uses these cool Project Fugu APIs:
 
-${Array.from(r.querySelectorAll("li")).slice(0,3).map(s=>`👉 ${s.textContent}`).join(`
+${Array.from(r.querySelectorAll("li")).slice(0,2).map(s=>`👉 ${s.textContent}`).join(`
 `)}
 
-(via the 🐡 ${document.title}: https://tomayac.github.io/fugu-showcase/data/)`.trim(),files:[c]};if(navigator.canShare(i))try{await navigator.share(i)}catch(s){s.name!=="AbortError"&&console.error(s.name,s.message)}})})}"serviceWorker"in navigator&&window.addEventListener("load",()=>{navigator.serviceWorker.register("sw.js")});</script><footer>Made by <a href=https://twitter.com/tomayac rel=noopener target=_blank>@tomayac</a>. You can propose missing apps by submitting them via this <a href=https://docs.google.com/forms/d/e/1FAIpQLScNd1rClbmFWh6FcMmjUNrwg9RLz8Jk4BkHz_-EOpmkVd_-9g/viewform rel=noopener target=_blank>form</a>. Source code on <a href=https://github.com/tomayac/fugu-showcase rel=noopener target=_blank>GitHub</a>.</footer></main>
+(via the 🐡 ${document.title}: https://web.dev/fugu-showcase/)`.trim(),files:[c]};if(navigator.canShare(i))try{await navigator.share(i)}catch(s){s.name!=="AbortError"&&console.error(s.name,s.message)}})})}"serviceWorker"in navigator&&window.addEventListener("load",()=>{navigator.serviceWorker.register("sw.js")});</script><footer>Made by <a href=https://twitter.com/tomayac rel=noopener target=_blank>@tomayac</a>. You can propose missing apps by submitting them via this <a href=https://docs.google.com/forms/d/e/1FAIpQLScNd1rClbmFWh6FcMmjUNrwg9RLz8Jk4BkHz_-EOpmkVd_-9g/viewform rel=noopener target=_blank>form</a>. Source code on <a href=https://github.com/tomayac/fugu-showcase rel=noopener target=_blank>GitHub</a>.</footer></main>
